<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_container_item"
    android:layout_width="match_parent"
    android:layout_height="26dp"
    android:background="@color/colorSecondaryDark">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_city_corona_status"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:gravity="center"
        android:text="@string/seoul"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_accumulate_corona_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_accumulate_corona_status"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:gravity="center"
        android:text="@string/sample_number_corona_status"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_dead_corona_status"
        app:layout_constraintStart_toEndOf="@id/tv_city_corona_status"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dead_corona_status"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:gravity="center"
        android:text="@string/dead"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_accumulate_corona_status"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>