<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">

    <data>

        <variable
            name="vm"
            type="com.golddog.mask_location.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/scene_main">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/AppBarTheme">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_map"
            android:name="com.naver.maps.map.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_main"
            tools:background="@android:color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/marker_filter_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_main"
            app:layout_constraintVertical_bias="0.05">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_plenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={vm.plentyChecked}"
                android:text="@string/plenty_number_status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cb_some"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_some"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={vm.someChecked}"
                android:text="@string/some_number_status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cb_few"
                app:layout_constraintStart_toEndOf="@+id/cb_plenty"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_few"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={vm.fewChecked}"
                android:text="@string/few_number_status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cb_empty"
                app:layout_constraintStart_toEndOf="@+id/cb_some"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={vm.emptyChecked}"
                android:text="@string/empty_status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cb_break"
                app:layout_constraintStart_toEndOf="@+id/cb_few"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={vm.breakChecked}"
                android:text="@string/break_status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cb_empty"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mask_rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorSecondaryLight"
            app:layout_constraintBottom_toTopOf="@id/fab_main"
            app:layout_constraintRight_toRightOf="@id/fab_main"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_mask" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_mask_rotation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_label_background"
            android:padding="10dp"
            android:text="@string/about_mask_5days_sys"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/fab_mask_rotation"
            app:layout_constraintEnd_toStartOf="@id/fab_mask_rotation"
            app:layout_constraintTop_toTopOf="@id/fab_mask_rotation" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_1339call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorSecondaryLight"
            app:layout_constraintBottom_toTopOf="@id/fab_mask_rotation"
            app:layout_constraintRight_toRightOf="@id/fab_main"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_local_phone_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_1339call_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_label_background"
            android:padding="10dp"
            android:text="@string/call1339"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/fab_1339call"
            app:layout_constraintEnd_toStartOf="@id/fab_1339call"
            app:layout_constraintTop_toTopOf="@id/fab_1339call" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_corona_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorSecondaryLight"
            app:layout_constraintBottom_toTopOf="@id/fab_1339call"
            app:layout_constraintRight_toRightOf="@id/fab_main"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_warning_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_corona_manual_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_label_background"
            android:padding="10dp"
            android:text="@string/corona_manual"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/fab_corona_manual"
            app:layout_constraintEnd_toStartOf="@id/fab_corona_manual"
            app:layout_constraintTop_toTopOf="@id/fab_corona_manual" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_corona_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorSecondaryLight"
            app:layout_constraintBottom_toTopOf="@id/fab_corona_manual"
            app:layout_constraintRight_toRightOf="@id/fab_main"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_insert_chart_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_corona_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_label_background"
            android:padding="10dp"
            android:text="@string/corona_status"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/fab_corona_status"
            app:layout_constraintEnd_toStartOf="@id/fab_corona_status"
            app:layout_constraintTop_toTopOf="@id/fab_corona_status" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>