<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cv_toolbar_corona_coc"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back_corona_coc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:src="@drawable/ic_arrow_back_white_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_barun_gothic_bold"
                android:text="@string/corona_coc"
                android:textColor="@color/colorSecondaryLight"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_toolbar_corona_coc">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_left_corona_coc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.075" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_right_corona_coc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.925" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nanum_barun_gothic_bold"
                    android:text="@string/corona_coc"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_corona_coc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@id/gl_left_corona_coc"
                    app:layout_constraintEnd_toEndOf="@id/gl_right_corona_coc"
                    android:layout_marginTop="40dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/corona_coc"/>

                <TextView
                    android:id="@+id/tv_relief_hospital_corona_coc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/iv_corona_coc"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/relief_hospital_title"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_barun_gothic_bold"/>

                <TextView
                    android:id="@+id/tv_relief_hospital_content_corona_coc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/iv_corona_coc"
                    app:layout_constraintStart_toStartOf="@id/gl_left_corona_coc"
                    app:layout_constraintEnd_toEndOf="@id/gl_right_corona_coc"
                    android:layout_marginTop="35dp"
                    android:text="@string/relief_holpital_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:fontFamily="@font/nanum_barun_gothic"/>

                <TextView
                    android:id="@+id/tv_elderly_manual_corona_coc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_relief_hospital_content_corona_coc"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/elderly_manual_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/nanum_barun_gothic_bold"/>

                <TextView
                    android:id="@+id/tv_elderly_manual_content_corona_coc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_elderly_manual_corona_coc"
                    app:layout_constraintStart_toStartOf="@id/gl_left_corona_coc"
                    app:layout_constraintEnd_toEndOf="@id/gl_right_corona_coc"
                    android:layout_marginTop="8dp"
                    android:text="@string/elderly_manual_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_barun_gothic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_elderly_manual_content_corona_coc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/gl_right_corona_coc"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/corona_manual_source"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_barun_gothic"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>